@@ -108,6 +108,25 @@
             <artifactId>opencsv</artifactId>
             <version>${opencsv.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.sashirestela</groupId>
+            <artifactId>simple-openai</artifactId>
+            <version>${simpleopenai.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.tjake</groupId>
+            <artifactId>jlama-core</artifactId>
+            <version>${jlama.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tjake</groupId>
+            <artifactId>jlama-native</artifactId>
+            <!-- supports linux-x86_64, macos-x86_64/aarch_64, windows-x86_64
+                 Use https://github.com/trustin/os-maven-plugin to detect os and arch -->
+            <classifier>${jlama-native.classifier}</classifier>
+            <version>${jlama.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -118,6 +137,18 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.vector</arg>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-modules jdk.incubator.vector --enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -133,6 +164,9 @@
         <tribuo-all.version>4.3.2</tribuo-all.version>
         <common-lang3.version>3.17.0</common-lang3.version>
         <opencsv.version>5.11</opencsv.version>
+        <simpleopenai.version>3.22.2</simpleopenai.version>
+        <jlama.version>0.8.4</jlama.version>
+        <jlama-native.classifier>windows-x86_64</jlama-native.classifier>
     </properties>
 
 </project>
